--- a/scope-rs/Cargo.toml
+++ b/scope-rs/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "eth_toolkit"
-version = "0.1.0"
-authors = ["carl"]
+version = "0.0.1"
+authors = ["popular"]
 edition = "2021"
 
 
@@ -46,12 +46,6 @@ num-traits = "0.2.16"
 getrandom = { version = "0.2", features = ["js"] }
 
 
-
-
-# native:
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-env_logger = "0.10"
-
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
@@ -62,7 +56,7 @@ opt-level = 2 # fast and small wasm
 
 # Optimize all dependencies even in debug builds:
 [profile.dev.package."*"]
-opt-level = 2
+opt-level = 3
 
 
 [patch.crates-io]
