--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ scope-rs/Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
+example/lib/
+example/out/
+example/cache/
+example/bin/
 
 scope-js/out
 scope-js/node_modules
@@ -39,5 +43,6 @@ docs/
 # Dotenv file
 .env
 
-
 *.vsix
+
+
